--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -787,6 +787,10 @@ main {
           font-size: 15px;
           letter-spacing: 2px;
           word-spacing: 0px;
+          p{
+          margin: 2px 0 0 0;
+    font-weight: 100;
+          }
 
           @media (max-width: 490px) {
             font-size: 12px;
